Update DataModel.java
remove deprecated